@@ -156,4 +156,16 @@
     </macrodef>
     <escape a="avalue" b="bvalue"/>
   </target>
+
+  <target name="attribute.description">
+    <macrodef name="d">
+      <attribute name="description"/>
+      <attribute name="d" default="p"/>
+      <sequential>
+        <echo>description is @{description}</echo>
+      </sequential>
+    </macrodef>
+    <d description="hello world"/>
+  </target>
+
 </project>
